--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -1,32 +1,54 @@
-.welcome{
+.welcome {
     display: flex;
     align-items: center;
     flex-direction: column;
-    font-size: 1.2rem;
-    /* font-weight: bold; */
-    gap: 25px;
+    font-size: 0.9rem; 
+    gap: 18.75px; 
+    margin-top: 150px;
+    height: 88vh;
 }
 
-.welcome img{
-    margin-top: 150px;
+.welcome img {
     max-width: 20%;
     height: auto;
 }
 
-.welcome h1{
+.welcome h1 {
     text-align: center;
-    width: 70%;
-    font-size: 4.0rem;
+    max-width: 82rem; 
+    font-size: clamp(1.5rem, 3vw, 3rem); 
     font-weight: bold;
+    margin: 0px 100px; 
 }
 
-.welcome p{
+.welcome p {
     text-align: center;
-    width: 50%;
-    font-size: 24px;
-    line-height: 40px;
+    max-width: 61rem; 
+    font-size: 20px;
+    line-height: 30px; 
+    margin: 0px 150px; 
 }
 
-.welcome h1 span{
+.welcome h1 span {
     color: #64ffda;
+}
+
+@media screen and (max-width: 768px) {
+    .welcome img {
+        min-width: 30%;
+        height: auto; 
+    }
+
+    .welcome h1 {
+        margin-top: 1.5rem; 
+        width: 90%;
+        font-size: 2.35rem; 
+    }
+
+    .welcome p {
+        width: 70%; 
+        font-size: 1.125rem; 
+        line-height: 24px; 
+        margin: 7.5px 0px; 
+    }
 }
