--- a/src/Contact.css
+++ b/src/Contact.css
@@ -124,6 +124,8 @@
 
     .contact-title h1{
         font-size: 50px;
+        margin: 0px 15px; 
+        padding: 0px 0px;
     }
 
     .contact-container{
