--- a/src/Projects.css
+++ b/src/Projects.css
@@ -79,7 +79,7 @@
 
 @media screen and (max-width: 768px){
     .projects{
-        margin: 80px 50px;
+        margin: 80px 30px;
     }
 
     .projects-title h1{
@@ -95,11 +95,11 @@
     }
 
     .project-card h2{
-        font-size: 30px;
+        font-size: 1.57rem;
     }
 
     .project-card p{
-        font-size: 20px;
+        font-size: 1.25rem;
         line-height: 32px;
     }
 
