--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -9,16 +9,16 @@
 }
 
 .welcome img {
-    max-width: 20%;
+    width: clamp(300px, 20%, 40%);
     height: auto;
 }
 
 .welcome h1 {
     text-align: center;
     max-width: 82rem; 
-    font-size: clamp(1.5rem, 3vw, 3rem); 
+    font-size: clamp(2.35rem, 3vw, 3rem); 
     font-weight: bold;
-    margin: 0px 100px; 
+    margin: 0px 80px; 
 }
 
 .welcome p {
@@ -34,21 +34,36 @@
 }
 
 @media screen and (max-width: 768px) {
+
+    .welcome {
+        margin-top: 35%;
+    }
+
     .welcome img {
-        min-width: 30%;
+       width: clamp(175px, 40%, 40%); 
         height: auto; 
+        margin-bottom: 2rem;
     }
 
     .welcome h1 {
         margin-top: 1.5rem; 
         width: 90%;
-        font-size: 2.35rem; 
+        font-size: 2rem; 
+        text-align: left;
+        display: block;
+        line-height: 1.3;
+        margin: 0px 100px;
+        
     }
 
     .welcome p {
-        width: 70%; 
+        width: 90%; 
         font-size: 1.125rem; 
         line-height: 24px; 
         margin: 7.5px 0px; 
+        text-align: left;
     }
+
+    
+
 }
