--- a/src/Projects.css
+++ b/src/Projects.css
@@ -91,7 +91,7 @@
     }
 
     .project-card{
-        max-width: 100%;
+        max-width: 450px;
     }
 
     .project-card h2{
@@ -107,4 +107,10 @@
         width: 100%;
     }
     
+}
+
+@media (min-width: 769px) and (max-width: 1024px) { /* Tablet styles */
+    .projects-container{
+        grid-template-columns: repeat(2, 2fr);
+    }
 }
