--- a/src/Projects.css
+++ b/src/Projects.css
@@ -106,6 +106,12 @@
     .card-img{
         width: 100%;
     }
+
+    .project-card:hover {
+        transform: none;
+        transition: none;
+        border: 2px solid white;
+    }
     
 }
 
